# router

./: README.md  cabal.project  router.cabal  stack.yaml  stack.yaml.bk  tst
app/: Main.hs  Repo.hs
app/Repo/: .#DB.hs  DB.hs  Types.hs
src/: Report.hs
src/Data/Pattern/: Bits.hs  Haskell.hs  Matcher.hs  Test.hs  ToHaskell.hs  ToHaskellTest.hs  X64.hs  X86.hs
src/Data/Time/: Util.hs
src/Data/Typed/: GHC.hs  ToHaskell.hs  ToHaskellTest.hs
src/Model/: Report.hs
src/Network/: Bus.hs
src/Network/Router/: .#Util.hs  ByAny.hs  ByPattern.hs  ByType.hs  Echo.hs  Named.hs  Pattern.hs  Types.hs  Util.hs
src/Pandoc/: Report.hs
src/Quid2/Util/: Service.hs
state/top-router/ADTS/: events.version
test/: DocSpec.hs  PatternSpec.hs  Spec.hs
test/Test/Data/: Flat.hs
test/Test/Data3/: Flat.hs
