name:                router
version:             0.1.1
synopsis:            Flexible, typed router.
description:         Please see README.md
homepage:            http://github.com/tittoassini/router#readme
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2015 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Bus,Network.Router.ByAny,Network.Router.ByType,Network.Router.ByPattern,Network.Router.Echo,Network.Router.Types,Network.Router.Util,Pandoc.Report,Data.Pattern.Bits,Data.Pattern.Haskell,Data.Pattern.X64,Data.Pattern.Matcher
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     --, deepseq >= 1.4.1.1
                     , flat==0.3.*
                     -- , ghc
                     --, ghc-paths
                     , hashable
                     , list-t
                     , model>=0.4.2 && < 0.5
                     , pandoc
                     , pandoc-types
                     , top >= 0.2.2 && < 0.3
                     , stm
                     , stm-containers>=0.2.4
                     --, strict
                     , time
                     --, timeit
                     , transformers >= 0.4
                     , zm==0.3.*
                     , unix
                     , websockets
                     , top-apps
  if (arch(x86_64))
    build-depends:  x86-64bit>=0.4.4

  default-language:    Haskell2010

executable top-net
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hslogger
                     , text
                     , containers
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , scotty>=0.7.2
                     , transformers
                     , zm, top,router,top-apps

  default-language:    Haskell2010

-- executable quid2-ghc
--   hs-source-dirs:      src
--   main-is:             Data/Zm/GHC.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   -- other-modules:       Repo.DB,Repo.Types
--   build-depends:       base
--                      , bytestring
--                      , hslogger
--                      , text
--                      , containers,acid-state,safecopy,filepath,mtl
--                      , zm, top,router,flat,transformers,websockets,ghc,ghc-paths,timeit,plugins

--   default-language:    Haskell2010

test-suite router-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,zm,hslogger,bytestring,websockets,async >= 2.1.0,stm,top,template-haskell,extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite router-test-pattern
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PatternSpec.hs
  other-modules: Test.Data,Test.Data.Flat,Test.Data.Model,Test.Data2,Test.Data2.Flat,Test.Data3,Test.Data3.Flat
  build-depends:       base,containers,bytestring,text,tasty,tasty-hunit,tasty-quickcheck
                       , flat, model, zm ,top, router,template-haskell,criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite router-doctest
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocSpec.hs
  build-depends:      base >4 && <5, doctest>=0.11.1, filemanip>=0.3.6.3
  HS-Source-Dirs:     test

source-repository head
  type:     git
  location: https://github.com/tittoassini/router





