name:                router
version:             0.1.1
synopsis:            Flexible, typed router.
description:         Please see README.md
homepage:            http://github.com/Quid2/router#readme
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2019 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
cabal-version:       >=2

library
  hs-source-dirs:      src
  exposed-modules:     Network.Bus,Network.Router.ByAny,Network.Router.ByType,Network.Router.ByPattern,Network.Router.Echo,Network.Router.Types,Network.Router.Util,Pandoc.Report,Model.Report
  -- exposed-modules: Data.Time.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     --, deepseq >= 1.4.1.1
                     , flat==0.4.*
                     -- , ghc
                     --, ghc-paths
                     , hashable
                     , list-t
                     , model == 0.5.* 
                     -- >=0.4.2 && < 0.5
                     , pandoc
                     , pandoc-types
                     , top >= 0.2.2 && < 0.3
                     , stm
                     , stm-containers >=1
                     --, strict
                     , time
                     --, timeit
                     , transformers >= 0.4
                     , zm>=0.3.1 && < 0.4
                     , unix
                     , websockets
                     , text
                     -- , wuss
                     , top-apps

  default-language:    Haskell2010

-- library internal
--     hs-source-dirs:      src
--     exposed-modules: Data.Time.Util
--     build-depends: base,time,zm
--     default-language:    Haskell2010

executable top-router
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hslogger
                     , text
                     , containers
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , scotty>=0.7.2
                     , transformers
                     , zm, top
                     , router
                     --,internal
                     , directory,unix,filepath,hdaemonize,top-apps
  --other-modules: Quid2.Util.Dir,Quid2.Util.Service

  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,zm,hslogger,bytestring,websockets,async >= 2.1.0,stm,top,template-haskell,extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite doctest
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocSpec.hs
  build-depends:      base >4 && <5, doctest>=0.11.1, filemanip>=0.3.6.3
  HS-Source-Dirs:     test

source-repository head
  type:     git
  location: https://github.com/Quid2/router





